--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@prisma/config": "^7.3.0",
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "^30.0.0",
+    "@types/passport-jwt": "^4.0.1",
     "jest": "^30.2.0",
     "prisma": "^7.1.0",
     "ts-jest": "^29.4.6"
@@ -26,12 +27,16 @@
     "@nestjs/common": "^11.1.13",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.1.13",
+    "@nestjs/jwt": "^11.0.2",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.13",
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.1.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.18.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
